<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/dimen200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen32dp"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/dimen5dp"
            app:cardElevation="@dimen/dimen5dp"
            app:layout_constraintBottom_toTopOf="@+id/cardViewFooter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/ivFlag"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/image"
                    android:padding="@dimen/dimen4dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="bottom|center"
                    android:padding="@dimen/dimen4dp"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen24dp"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/dimen5dp"
            app:cardElevation="@dimen/dimen5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen12dp">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/email"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toStartOf="@+id/tvEmailValue"
                    app:layout_constraintHorizontal_weight="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEmailValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="0.7"
                    app:layout_constraintStart_toEndOf="@+id/tvEmail"
                    app:layout_constraintTop_toTopOf="@+id/tvEmail" />

                <TextView
                    android:id="@+id/tvStreet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen12dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/street"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toStartOf="@+id/tvStreetValue"
                    app:layout_constraintHorizontal_weight="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmailValue" />

                <TextView
                    android:id="@+id/tvStreetValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="0.7"
                    app:layout_constraintStart_toEndOf="@+id/tvStreet"
                    app:layout_constraintTop_toTopOf="@+id/tvStreet" />


                <TextView
                    android:id="@+id/tvState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen12dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/state"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toStartOf="@+id/tvStatevalue"
                    app:layout_constraintHorizontal_weight="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvStreetValue" />

                <TextView
                    android:id="@+id/tvStatevalue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="0.7"
                    app:layout_constraintStart_toEndOf="@+id/tvState"
                    app:layout_constraintTop_toTopOf="@+id/tvState" />

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen12dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/city"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toStartOf="@+id/tvCityValue"
                    app:layout_constraintHorizontal_weight="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvState" />

                <TextView
                    android:id="@+id/tvCityValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="0.7"
                    app:layout_constraintStart_toEndOf="@+id/tvCity"
                    app:layout_constraintTop_toTopOf="@+id/tvCity" />

                <TextView
                    android:id="@+id/tvCountryName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen12dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/country"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toStartOf="@+id/tvCountryNameValue"
                    app:layout_constraintHorizontal_weight="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCity" />

                <TextView
                    android:id="@+id/tvCountryNameValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="0.7"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryName"
                    app:layout_constraintTop_toTopOf="@+id/tvCountryName" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>